<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_scan">

    <fragment
        android:id="@+id/navigation_lists"
        android:name="com.bpr.allergendetector.ui.lists.ListsFragment"
        android:label="@string/title_lists"
        tools:layout="@layout/fragment_lists" />

    <fragment
        android:id="@+id/navigation_scan"
        android:name="com.bpr.allergendetector.ui.scan.ScanFragment"
        android:label="@string/title_scan"
        tools:layout="@layout/fragment_scan" >
        <action
            android:id="@+id/action_navigation_scan_to_navigation_photo"
            app:destination="@id/navigation_photo" />
    </fragment>

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.bpr.allergendetector.ui.profile.ProfileFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_profile" />

    <fragment
        android:id="@+id/navigation_allergen_list"
        android:name="com.bpr.allergendetector.ui.allergenlist.AllergenListFragment"
        android:label="@string/title_allergen_list"
        tools:layout="@layout/fragment_allergen_list" />

    <fragment
        android:id="@+id/navigation_photo"
        android:name="com.bpr.allergendetector.ui.scan.PhotoFragment"
        android:label="@string/title_photo"
        tools:layout="@layout/fragment_photo" >
        <action
            android:id="@+id/action_navigation_photo_to_navigation_scan"
            app:destination="@id/navigation_scan" />
        <argument
            android:name="image"
            app:argType="string" />
        <action
            android:id="@+id/action_navigation_photo_to_navigation_result"
            app:destination="@id/navigation_result" />
    </fragment>

    <fragment
        android:id="@+id/navigation_result"
        android:name="com.bpr.allergendetector.ui.scan.ResultFragment"
        android:label="@string/title_result"
        tools:layout="@layout/fragment_result" >
        <argument
            android:name="imagePath"
            app:argType="string" />
        <argument
            android:name="result"
            app:argType="string" />
        <action
            android:id="@+id/action_navigation_result_to_navigation_scan"
            app:destination="@id/navigation_scan" />
        <action
            android:id="@+id/action_navigation_result_to_navigation_edit_text"
            app:destination="@id/navigation_edit_text" />
        <action
            android:id="@+id/action_navigation_result_to_navigation_detection_result"
            app:destination="@id/navigation_detection_result" />
    </fragment>

    <fragment
        android:id="@+id/navigation_edit_text"
        android:name="com.bpr.allergendetector.ui.scan.EditTextFragment"
        android:label="@string/title_edit_text"
        tools:layout="@layout/fragment_edit_text" >
        <argument
            android:name="imagePath"
            app:argType="string" />
        <argument
            android:name="textString"
            app:argType="string" />
        <action
            android:id="@+id/action_navigation_edit_text_to_navigation_detection_result"
            app:destination="@id/navigation_detection_result" />
    </fragment>

    <fragment
        android:id="@+id/navigation_detection_result"
        android:name="com.bpr.allergendetector.ui.scan.DetectionResultFragment"
        android:label="@string/title_result_det"
        tools:layout="@layout/fragment_detection_result" >
        <argument
            android:name="imagePath"
            app:argType="string" />
        <argument
            android:name="scanString"
            app:argType="string" />
    </fragment>

</navigation>