<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/addAllergenTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@color/purple_500"
            android:elevation="15dp"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/add_allergen"
            android:textColor="@color/white"
            android:textSize="19sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/allergenName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="15dp"
            android:layout_marginBottom="5dp"
            android:background="@drawable/shape_background"
            android:hint="@string/allergen"
            android:inputType="textAutoCorrect"
            android:padding="15dp"
            android:shadowRadius="50"
            android:textColor="@color/purple_500"
            android:textSize="18sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginHorizontal="5dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/mild"
                android:textColor="@color/black"
                android:textSize="18sp" />

            <SeekBar
                android:id="@+id/severitySeekBar"
                style="@style/Widget.AppCompat.SeekBar.Discrete"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="5"
                android:max="2"
                android:paddingHorizontal="40dp"
                android:progress="0"
                android:progressTint="@color/purple_200"
                android:thumbTint="@color/purple_500" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginHorizontal="5dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/severe"
                android:textColor="@color/black"
                android:textSize="18sp" />
        </LinearLayout>

    </LinearLayout>

</LinearLayout>