<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.scan.PhotoFragment" >

    <com.canhub.cropper.CropImageView
        android:id="@+id/capturedImage"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:contentDescription="TODO"
        app:layout_constraintBottom_toTopOf="@id/cropButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/retake_button"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:elevation="2dp"
        android:layout_marginBottom="80dp"
        android:text="@string/retake_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/cropButton"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/use_button"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:elevation="2dp"
        android:layout_marginBottom="80dp"
        android:text="@string/use_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/cropButton" />

    <Button
        android:id="@+id/cropButton"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:elevation="2dp"
        android:layout_marginBottom="80dp"
        android:text="@string/crop_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/use_button"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/retake_button" />

</androidx.constraintlayout.widget.ConstraintLayout>